2005-07-12  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.png: this file is no longer used.

2005-07-11  Diego Gonzalez  <diego@pemas.net>

	* e-image-chooser.c: remove gdk_pixbuf_unref calls which are
	  deprecated and use g_object_unref instead

2005-07-11  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me-password.c: fix some string errors

	  Fixes bug 309951 and bug 309950
2005-07-10  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-about-me.glade:  HIG fixes; fix widget padding,
	use sentence capitalization for text field labels, fix 
	mnemonic conflics, and remove mnemonics from tab labels.

	Also fixes bug 309952
	
2005-07-08  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.desktop.in: this file is not useful on the CVS.

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me-password.c: (wait_child):
	fixed some typo, Clytie Siddall <clytie@riverland.net.au> 
	(Closes: #302614).

2005-07-05  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.c (about_me_update_photo): Improve the behaviour 
	  of the capplet when using large images (scale the image down to 
	  a resonable size before storing it in EDS).
	* e-image-chooser.c: remove debug output

2005-07-05  Diego Gonzalez  <diego@pemas.net>

	Patch by Jaap A. Haitsma <jaap@haitsma.org>

	* gnome-about-me.c: Remove use of bonobo, we don't need it.
	* gnome-about-me.c: Reorder some of the code and simplify file
	  chooser, also avoid having more than on instance of the 
	  file chooser dialog opened.
	* gnome-about-me.glade: remove some garbage that was left
	* gnome-about-me.desktop.in.in: set the correct bugzilla component
	  and icon.
	* Makefile.am: fix so that the custom dialog works in glade
	  (bug 309353)
	* Set dialog icon (bug 309342)

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix the list of desktop files for the tarball.
	* gnome-about-me.desktop.in.in: fix the component.

2005-07-05  Sebastien Bacher  <seb128@debian.org>
